# agensic

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NEXT_STEPS.md  NOTICE  README.md  agensic.bash  agensic.zsh  bootstrap.sh  cla-signatures.json  cli.py  engine.py  ghostshell.zsh  index.html  install.sh  learning.py  privacy_guard.py  pyproject.toml  requirements.txt  server.py  shell_client.py  termimind.zsh  test.md  test_command_guardrails.py  test_engine_privacy.py  test_learning_migration.py  test_pr.md  test_prefix_cache.py  test_privacy_guard.py  test_server_logging_privacy.py  test_server_nl_modes.py  vector_db.py
.ci-zsh/: .zcompdump  .zshenv
.github/workflows/: ci.yml  cla.yml  provenance-tui-release.yml  tuis-release.yml
agensic/: __init__.py  paths.py  version.py
agensic/cli/: app.py  daemon.py  track.py
agensic/config/: __init__.py  auth.py  loader.py  models.py
agensic/engine/: __init__.py  agent_registry.py  provenance.py  registry_updater.py  suggestion_engine.py
agensic/privacy/: guard.py
agensic/server/: __init__.py  app.py  deps.py  routes_admin.py  routes_assist.py  routes_command_store.py  routes_intent.py  routes_predict.py  routes_provenance.py  routes_sessions.py  schemas.py
agensic/state/: __init__.py  journal.py  snapshot.py  sqlite_store.py
agensic/utils/: history.py  shell.py
agensic/vector_db/: command_db.py  indexing.py  ranking.py  (+1 more)
ghostshell/: __init__.py  version.py
rust/provenance_tui/: Cargo.toml
rust/provenance_tui/src/: agents.rs  checkpoints.rs  main.rs  sessions.rs  sessions_render.rs
scripts/: README.md  enforce_signed_batch.sh  publish_provenance_tui_release.sh  publish_tuis_release.sh  release.sh  release_provenance_tui.sh  release_tuis.sh  signed_exec.sh  signed_session.sh  test
shell/: agensic_shared.sh
(+94 files in other folders)
